added report problem function

--- a/workspace/src/pages/home/home.html
+++ b/workspace/src/pages/home/home.html
@@ -12,14 +12,14 @@
       </ion-row>
       <ion-row>
         <ion-col text-center>
-          <button ion-button icon-only  color="secondary" style = "display: inline-block; width : 100%;" (click)="readNFC()">
+          <button ion-button icon-only  color="secondary" style = "display: inline-block; width : 100%;" (click)="readQRcode()">
               Scan QR Code
           </button>
          </ion-col>
        </ion-row>
     <ion-row>
         <ion-col text-center>
-          <button ion-button icon-only  color="secondary" style = "display: inline-block; width : 100%;" (click)="openAd()">
+          <button ion-button icon-only  color="secondary" style = "display: inline-block; width : 100%;" (click)="readNFC()">
               Read NFC tag
           </button>
          </ion-col>
