--- a/workspace/src/pages/alerts/alerts.html
+++ b/workspace/src/pages/alerts/alerts.html
@@ -1,6 +1,6 @@
 <ion-header>
         <ion-navbar>
-          <ion-title style = "text-align: left;">Alerts</ion-title>
+          <ion-title style = "text-align: left;">Rewards</ion-title>
         </ion-navbar>
 </ion-header>
 
@@ -8,7 +8,7 @@
 
         <ion-card>
                 <ion-card-header>
-                  Notification
+                  Rewards
                 </ion-card-header>
               <ion-item>
                     <ion-label>Health Insurance Renewal pending!</ion-label> 
