--- a/Linked_Website/index.html
+++ b/Linked_Website/index.html
@@ -2,12 +2,27 @@
 <html lang="en">
 <head>
   <title>Linked</title>
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
+
+  /* Always set the map height explicitly to define the size of the div
+   * element that contains the map. */
+  #map {
+    height: 100%;
+  }
+  /* Optional: Makes the sample page fill the window. */
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+
     .navbar {
       margin-bottom: 0;
       border-radius: 0;
@@ -48,14 +63,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <img src="logo.png">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="#">Home</a></li>
-        <li class="active"><a href="#">Reports</a></li>
-        <li><a href="#">Map</a></li>
-        <li><a href="#">Management</a></li>
+        <li class="active"><a href="#" onclick="showReports()">Reports</a></li>
+        <li><a href="#" onclick="showMap()">Map</a></li>
+        <li><a href="#">Statistics</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
@@ -64,40 +79,49 @@
   </div>
 </nav>
 
-<div class="container-fluid text-center">
-  <div class="row content">
-    <div class="col-sm-2 sidenav">
-      <p><a href="#">Recent</a></p>
-      <p><a href="#">Fixed</a></p>
-      <p><a href="#">Not Fixed</a></p>
-    </div>
-    <div class="col-sm-8 text-left">
-      <h2><b>Recent Reports</b></h2>
-      <p style= "font-size: 14pt;">All the recent reports are listed below.</p>
-      <hr>
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Report ID</th>
-            <th>Bin Type</th>
-            <th>Bin ID</th>
-            <th>Problem</th>
-            <th>Time</th>
-            <th>Address</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="tablebody">
-          <tr>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-      <br><br>
+<div id="reports">
+  <div class="container-fluid text-center">
+    <div class="row content">
+      <div class="col-sm-2 sidenav">
+        <p><a href="#">Not Fixed</a></p>
+        <p><a href="#">Fixed</a></p>
+      </div>
+      <div class="col-sm-8 text-left">
+        <h2><b>Recent Reports</b></h2>
+        <p style= "font-size: 14pt;">All the recent reports are listed below.</p>
+        <hr>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>Report ID</th>
+              <th>Bin Type</th>
+              <th>Bin ID</th>
+              <th>Problem</th>
+              <th>Time</th>
+              <th>Address</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="tablebody">
+            <tr>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+        <br><br>
+      </div>
     </div>
   </div>
 
-<script src="../Linked_Website/table.js" type="text/javascript"></script>
+  <div id="map"></div>
+
+  <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+  </script>
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+  </script>
+
+<script src="../Linked_Website/linked.js" type="text/javascript"></script>
 
 </body>
 </html>
