--- a/Linked_Website/index.html
+++ b/Linked_Website/index.html
@@ -67,10 +67,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
         <li class="active"><a href="#" onclick="showReports()">Reports</a></li>
         <li><a href="#" onclick="showMap()">Map</a></li>
-        <li><a href="#">Statistics</a></li>
+        <li><a href="#" onclick="showStatistics()">Statistics</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
