final bug fixes

--- a/workspace/src/pages/home/home.html
+++ b/workspace/src/pages/home/home.html
@@ -1,6 +1,12 @@
 <ion-header>
     <ion-navbar>
       <ion-title  style = "text-align: left;">Linked</ion-title>
+      <ion-buttons end>
+            <button ion-button icon-end>
+                10&ensp;
+                <ion-icon name="trash"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 <ion-content no-bounce>
